# rpkg-config-rs

./: Cargo.toml  README.md
src/: lib.rs  tests.rs
