[package]
name = "rpkg-config"
version = "0.1.0"
edition = "2021"
authors = ["Maia S. R."]
license = "Zlib OR MIT OR Apache-2.0"
description = "Standalone library for reading pkg-config .pc files"
repository = "https://github.com/maia-s/rpkg-config-rs"
documentation = "https://docs.rs/rpkg-config"
keywords = ["pkg-config"]
categories = ["development-tools", "development-tools::ffi"]
