[package]
name = "rpkg-config"
version = "0.1.2"
edition = "2021"
authors = ["Maia S. R."]
license = "Zlib OR MIT OR Apache-2.0"
description = "Standalone library for reading pkg-config .pc files"
repository = "https://codeberg.org/maia/rpkg-config-rs"
documentation = "https://docs.rs/rpkg-config"
keywords = ["pkg-config"]
categories = ["development-tools", "development-tools::ffi"]
